--- a/NewJava/.classpath
+++ b/NewJava/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="lib/data-0.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
